[project]
name = "testplay-dc"
version = "0.1.0"
description = ""
authors = [
    {name = "ZoneTsuyoshi",email = "5413.6423.87896744.47449663.ti@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
pymupdf = "^1.25.3"
reportlab = "^4.3.0"
matplotlib = ">=3.10.0,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
pandas = ">=2.2.3,<3.0.0"
numpy = ">=2.2.2,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
